<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/img_direction" android:src="@drawable/straight" android:layout_x="30dp" android:layout_y="44dp"></ImageView>
    <EditText android:layout_height="189dp" android:layout_width="264dp" android:id="@+id/text_area_desc" android:inputType="textMultiLine" android:layout_x="28dp" android:layout_y="186dp"></EditText>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/lbl_title_parkingguide" android:text="@string/tittle_guide" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_x="34dp" android:layout_y="10dp"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/lbl_recomended_parkarea" android:layout_height="wrap_content" android:layout_width="126dp" android:text="@string/recommended_parking_area" android:layout_x="172dp" android:layout_y="51dp"></TextView>

    <TextView
        android:id="@+id/lbl_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="171dp"
        android:layout_y="110dp"
        android:text="@string/current_location_area"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_close_guide"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_x="168dp"
        android:layout_y="396dp"
        android:text="@string/text_close_guide" />

    <Button
        android:id="@+id/btn_direction"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_x="40dp"
        android:layout_y="397dp"
        android:text="@string/get_direction" />
    
</AbsoluteLayout>
